--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,17 @@
 body {
     padding-top: 5rem;
 }
+.flex-container{
+    display:flex;
+    flex-wrap:wrap;
+}
+
+.flex-item {
+    flex: 1; 
+    height: 100px; 
+    flex-basis: calc(50% - 5px); 
+}
+
+.rooms{
+    width:10px;
+}
