--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -15,3 +15,13 @@ body {
 .rooms{
     width:10px;
 }
+
+.image-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+.image-container > div {
+    margin: 10px;
+}
