--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -23,5 +23,33 @@ body {
     align-items: center;
 }
 .image-container > div {
+    border-radius: 10px;
     margin: 10px;
+
+}
+
+#Price{
+    margin-left: 10px;
+    border-radius: 10px;
+    background-color: aqua;
+    width:33%;
+    padding:2px;
+    color:white;
+}
+#title{
+    margin-left: 10px;
+}
+
+#prop_bttn{
+    width: 100%;
+}
+
+#location{
+    margin-left: 10px;
+    color: grey;
+}
+
+.image-container>div{
+    border: 2px ;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
