--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -53,3 +53,63 @@ body {
     border: 2px ;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
+
+.individual{
+    display: flex;
+    flex-direction: row;
+    justify-content: center; 
+    align-items: center;
+    flex-wrap: wrap; 
+    border: 2px ;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+.float{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start; 
+    align-items: center;
+}
+.float2{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start; 
+    align-items: center;
+}
+
+.flex{
+    margin: 20px;
+    width:390px;
+}
+
+#itype{
+    border-radius: 12px;
+    background-color:yellow;
+    width:90px;
+    padding:2px;
+    color:white;
+    margin-left:10px;
+    text-align: center;
+}
+
+#iprice{
+    border-radius: 12px;
+    background-color: aqua;
+    width:170px;
+    padding:2px;
+    color:white;
+    text-align: center;
+}
+
+#ibathrooms{
+    width:60%;
+    margin-left: 0px;
+}
+
+#ibedrooms{
+    width:50%;
+}
+
+#bttn{
+    width:150px;
+}
